--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
-		"chart.js": "^4.5.0"
+		"@getbrevo/brevo": "^3.0.1",
+		"@types/pg": "^8.15.5",
+		"chart.js": "^4.5.0",
+		"dotenv": "^17.2.1",
+		"drizzle-orm": "^0.44.4",
+		"pg": "^8.16.3",
+		"postgres": "^3.4.7"
 	}
 }
