--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
+		"dev": "vite dev --config vite.base.config.ts",
+		"build": "vite build --config vite.base.config.ts",
+		"preview": "vite preview --config vite.base.config.ts",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
+		"test:unit": "vitest --config vitest.config.ts",
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
