--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@getbrevo/brevo": "^3.0.1",
 		"@types/pg": "^8.15.5",
+		"blockbootstrapagent": "file:../blockbootstrapagent/blockbootstrapagent-1.0.1.tgz",
 		"chart.js": "^4.5.0",
 		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.44.4",
