--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest --config vitest.config.ts",
-		"test": "npm run test:unit -- --run"
+		"test:unit": "vitest run tests/{api,db,unit}",
+		"test:e2e": "npx vitest run tests/e2e"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -28,9 +28,11 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"node-fetch": "^3.3.2",
 		"playwright": "^1.53.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
+		"puppeteer": "^24.16.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
