--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "cross-env ENVIRONMENT=DEV vite dev --config vite.base.config.ts",
 		"build": "cross-env ENVIRONMENT=PROD vite build --config vite.base.config.ts",
-		"preview": "cross-env ENVIRONMENT=DEV vite preview --config vite.base.config.ts",
+		"preview": "cross-env ENVIRONMENT=PROD vite preview --config vite.base.config.ts",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
