--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
 		"@types/pg": "^8.15.5",
 		"blockbootstrapagent": "file:../blockbootstrapagent/blockbootstrapagent-1.0.1.tgz",
 		"chart.js": "^4.5.0",
+		"dompurify": "^3.2.6",
 		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.44.4",
+		"import": "^0.0.6",
+		"marked": "^16.2.0",
 		"pg": "^8.16.3",
 		"postgres": "^3.4.7"
 	}
