more env keys to get build working

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,6 +16,8 @@ jobs:
       BREVO_API_KEY: foobar
       VITE_BREVO_API_KEY: foobar
       POLYGON_API_KEY: foobar
+      OPENAI_API_KEY: foobar
+      UPLOAD_SECRET: foobar
 
     steps:
       - name: Checkout repository
