--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -41,4 +41,4 @@ jobs:
         run: ls -R src/tests
 
       - name: Run tests
-        run: npx cross-env ENVIRONMENT=TEST vitest run src/tests/{api,db,unit} --logLevel=debug
+        run: npx cross-env ENVIRONMENT=TEST vitest run src/tests/{api,db,unit}
